--- a/app/views/home/hello.html.erb
+++ b/app/views/home/hello.html.erb
@@ -1,2 +1,3 @@
-<h1>Home#hello</h1>
-<p>Find me in app/views/home/hello.html.erb</p>
+<h1>Just a test</h1>
+<p>Trying out react...</p>
+<%= react_component('Greeting', { text: 'hello'}, {prerender: true}) %>
