Switched out react-rails in favour of react-on-rails

--- a/app/views/home/hello.html.erb
+++ b/app/views/home/hello.html.erb
@@ -1,3 +1,3 @@
 <h1>Just a test</h1>
 <p>Trying out react...</p>
-<%= react_component('Greeting', { text: 'hello'}, {prerender: true}) %>
+<%= react_component('Greeting', props: { text: 'hello'}) %>
