--- a/app/views/questions/show.haml
+++ b/app/views/questions/show.haml
@@ -2,7 +2,7 @@
   = @wizard.name
 %h2#prompt
   = @question.prompt
-= simple_form_for(@question, as: :question, method: 'post', url: request.fullpath) do |f|
+= simple_form_for(:answer, url: question_answers_path(question_id: @question.id)) do |f|
   %p
     = f.input :id, as: :hidden
     = f.input :options, collection: @question.options, as: :radio_buttons,
