--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GovauTransitionsBeta</title>
+    <title>.gov.au Transitions Beta</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +9,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render partial: "partials/header" %>
+    <section class="wrapper">
+      <%= yield %>
+    </section>
   </body>
 </html>
