--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -9,7 +9,7 @@
       <div class="govau--logo">
         <img src="{% asset_path logo-govau-full-2x_alpha.png %}" alt="gov.au crest logo" width="270">
 
-        <div id="test" class="brandbar default"><!--ID is temp for example-->
+        <div class="brandbar default">
           <div class="b1"></div>
           <div class="b2"></div>
         </div>
@@ -18,8 +18,7 @@
       <div class="feedback" tabindex="1">
         <a href="" class="button--feedback">Give feedback</a>
       </div>
-
-    </div><!--wrapper-->
+    </div>
 
     <nav class="breadcrumbs--inverted" aria-label="breadcrumb">
       <div class="wrapper">
