Hooking up data from ruby view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("App", props: { name: "Stranger" }) %>
+<%= react_component("App", props: { landing: { name: "Transitions" } }) %>
