--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -7,7 +7,7 @@
   <section class="prerelease-govau--header">
     <div class="wrapper">
       <div class="govau--logo">
-        <img src="{% asset_path logo-govau-full-2x_alpha.png %}" alt="gov.au crest logo" width="270">
+        <!-- <img src="{% asset_path logo-govau-full-2x_alpha.png %}" alt="gov.au crest logo" width="270"> -->
 
         <div class="brandbar default">
           <div class="b1"></div>
