--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
 <%= react_component("App", props: @default_props) %>
 
-<a href="/transitions" role="button">Start Transition <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+<a href="/transitions" role="button">List Transitions <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
