Change logo url

--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -13,7 +13,7 @@
   <section class="prerelease-govau--header">
     <div class="wrapper">
 
-      <a class="govau--logo" href="/">
+      <a class="govau--logo" href="http://www.gov.au">
         <%= image_tag("/assets/icons/logo-govau-full-2x.png", width: "270") %>
         <div class="brandbar default">
           <div class="b1"></div>
