Point to local asset

--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -3,7 +3,7 @@
     <section>
       <figure>
         <div class="footer-logo">
-          <img alt="Australian Government Coat of Arms" src="/assets/coat-of-arms-af51ab555b0040c7bcda43484858d96594d2cb60d71ff58ff91003a9cc7f3e81.png">
+          <%= image_tag("/assets/coat-of-arms.png", alt: "Australian Government Coat of Arms") %>
         </div>
       </figure>
       <div class="footer-links">
