--- a/client/app/assets/stylesheets/main.scss
+++ b/client/app/assets/stylesheets/main.scss
@@ -1,3 +1,13 @@
+$fa-font-path: "~font-awesome/fonts";
+@import "~font-awesome/scss/font-awesome";
 // Point to a URL until fallback image assets are available by other means.
 $gov-ui-kit-image-base-url: 'https://gov-au-ui-kit.apps.staging.digital.gov.au/latest/img/';
 @import "~gov-au-ui-kit";
+
+a.govau--logo {
+  border-bottom: none;
+  &:hover, &:focus, &:active {
+    border-bottom: none;
+    background: none;
+  }
+}
