Rename from generic App to AgedCareWidget

--- a/app/views/questions/show.haml
+++ b/app/views/questions/show.haml
@@ -1,4 +1,4 @@
 %h1
   = @wizard.name
 
-= react_component("App", props: { currentQuestion: @question })
+= react_component("AgedCareWidget", props: { currentQuestion: @question })
