--- a/app/views/questions/show.haml
+++ b/app/views/questions/show.haml
@@ -1,4 +1,4 @@
 %h1
   = @wizard.name
 
-= react_component("AgedCareWidget", props: @props)
+= react_component("AgedCareWidget", props: render(template: "/questions/show.json.jbuilder"))
