Unbreak my spec

--- a/app/views/result_categories/index.haml
+++ b/app/views/result_categories/index.haml
@@ -14,3 +14,6 @@
           %span Possible next steps
         %p
           = category.description
+%h2.secondary-title Also explore
+%ul.secondary-links
+  = render @orphaned_results
