--- a/client/app/bundles/agedCareWidget/assets/stylesheets/main.scss
+++ b/client/app/bundles/agedCareWidget/assets/stylesheets/main.scss
@@ -3,6 +3,7 @@ $fa-font-path: "~font-awesome/fonts";
 // Point to a URL until fallback image assets are available by other means.
 $gov-ui-kit-image-base-url: 'https://gov-au-ui-kit.apps.staging.digital.gov.au/latest/img/';
 @import "~gov-au-ui-kit";
+@import "results";
 
 a.govau--logo {
   border-bottom: none;
