Refactor results stlying

--- a/client/app/bundles/agedCareWidget/assets/stylesheets/_results.scss
+++ b/client/app/bundles/agedCareWidget/assets/stylesheets/_results.scss
@@ -1,43 +1,24 @@
-@include media($tablet) {
-  .results-tiles {
-    max-width: 44rem;
-    & > ul {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction:row;
-      @include outer-container;
-      & > li {
-        @include span-columns(6 of 12);
-        @include omega(2n);
-      }
-    }
-    &.results-tiles--simple {
-      h3 {
-        font-size: rem(21);
-        min-height: rem(58);
-      }
-      p:last-child {
-        margin: 0;
-      }
-    }
-  }
-}
-
-
 .results-tiles {
   ul {
     padding-left: 0;
     margin-bottom: 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction:row;
+    @include outer-container;
   }
+
   li {
     list-style-type: none;
     padding: $base-spacing;
     background-color: $lighter-aqua;
     margin-bottom: 1.2em;
+
     h3 {
       margin-top: 0;
       margin-bottom: $small-spacing;
     }
+
     .number {
       font-size: 2em;
       padding-right: 0.5em;
@@ -51,6 +32,13 @@
       }
     }
   }
+}
+
+@include media($tablet) {
+ .results-tiles li {
+   @include span-columns(6 of 12);
+   @include omega(2n);
+ }
 }
 
 .secondary-title {
